fix: increase spacing in homepage

--- a/css/homepage/homepage.css
+++ b/css/homepage/homepage.css
@@ -18,6 +18,9 @@
 .homepage {
   padding: 4rem min(12rem, 15%);
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .mission {
@@ -63,6 +66,7 @@
 
 .sponsors__contact {
   text-align: center;
+  padding-top: 6rem;
 }
 
 .values__container {
